@@ -1,0 +1,18 @@
+title: Hitachi HNAS: Number of Users using CIFS shares
+agents: snmp
+catalog: hw/storagehw/hitachi
+license: GPL
+distribution: check_mk
+description:
+ Reports the number of users currently using a CIFS share on an Hitachi HNAS
+ storage system. The check always returns {OK}.
+
+item:
+ The ID of the EVS plus the name of the CIFS share, separated by a space. 
+ E. g. 6 home
+
+perfdata:
+ One value: The number of current users.
+
+inventory:
+ Finds one item per CIFS share.
