@@ -1,0 +1,49 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2013             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# ails.  You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+def inventory_hitachi_hnas_cifs(info):
+    # import pprint; pprint.pprint(info)
+    inventory = []
+    for evs_id, share_name, users in info:
+        inventory.append( (evs_id + " " + share_name, None) )
+    return inventory
+
+def check_hitachi_hnas_cifs(item, _no_params, info):
+    for evs_id, share_name, users in info:
+        if evs_id + " " + share_name == item:
+            perfdata = [ ('users',  users, '', '', 0) ]
+            return 0, "%s users" % users, perfdata
+    return 3, "Share not found"
+
+check_info["hitachi_hnas_cifs"] = {
+    "check_function"        : check_hitachi_hnas_cifs,
+    "inventory_function"    : inventory_hitachi_hnas_cifs,
+    "service_description"   : "CIFS Share EVS %s",
+    "has_perfdata"          : True,
+    "snmp_info"             : (".1.3.6.1.4.1.11096.6.1.1.3.2.1.3.1", [1, 2, 5]),
+                              # cifsShareEvsId, cifsShareName, cifsShareUsers
+    "snmp_scan_function"    : lambda oid: oid(".1.3.6.1.2.1.1.2.0").startswith(".1.3.6.1.4.1.11096.6"),
+}
