@@ -38,6 +38,7 @@
             NOTE: Please refer to the migration notes!
     * 0078 job: check now monitors the time since last start of the job, limits can be configured in WATO
     * 0079 f5_bigip_conns: new check to monitor number of current connections
+    * 0324 hitachi_hnas_cifs: new check for the number of users using a CIFS share
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
